--- a/KingfoodIO/Properties/launchSettings.json
+++ b/KingfoodIO/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     "KingfoodIO": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
+      "launchUrl": "https://localhost:5001/apis",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
