--- a/KingfoodIO/appsettings.json
+++ b/KingfoodIO/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
     "Logging": {
-        "LogLevel": {
-            "Default": "Warning"
-        }
+      "LogLevel": {
+        "Default": "Information"
+      }
     },
     "AllowedHosts": "*",
 
