增加权限功能

--- a/KingfoodIO/appsettings.Development.json
+++ b/KingfoodIO/appsettings.Development.json
@@ -49,6 +49,11 @@
     "DateTimeFormat": "yyyy-MM-dd HH:mm:ss"
 
 
+  },
+  "Jwt": {
+    "SecretKey": "EF129487abc38473",
+    "Issuer": "WebAppIssuer",
+    "Audience": "WebAppAudience"
   }
 
 }
