--- a/KingfoodIO/appsettings.json
+++ b/KingfoodIO/appsettings.json
@@ -47,6 +47,11 @@
     "DateTimeFormat": "yyyy-MM-dd HH:mm:ss"
 
 
+  },
+  "Jwt": {
+    "SecretKey": "info@wiiya.com",
+    "Issuer": "WebAppIssuer",
+    "Audience": "WebAppAudience"
   }
 
 }
