--- a/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Infrastructure/App.Infrastructure.csproj
@@ -41,6 +41,7 @@
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     <PackageReference Include="Stripe.net" Version="41.12.0" />
     <PackageReference Include="TimeZoneConverter" Version="3.2.0" />
+    <PackageReference Include="Twilio" Version="6.10.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Extensions.Identity.Core">
