fix: enable cache

--- a/KingfoodIO/appsettings.Development.json
+++ b/KingfoodIO/appsettings.Development.json
@@ -15,7 +15,7 @@
   },
 
   "CacheSetting": {
-    "CacheOn": "false",
+    "CacheOn": "true",
     "CacheConnection": ""
   },
   //"DocumentDb": {
