--- a/KingfoodIO/appsettings.json
+++ b/KingfoodIO/appsettings.json
@@ -15,7 +15,7 @@
   },
 
   "CacheSetting": {
-    "CacheOn": "false",
+    "CacheOn": "true",
     "CacheConnection": ""
   },
   "DocumentDb": {
@@ -41,7 +41,7 @@
 
   },
   "Jwt": {
-    "SecretKey": "info@wiiya.com",
+    "SecretKey": "EF129487abc38473",
     "Issuer": "WebAppIssuer",
     "Audience": "WebAppAudience"
   }
