--- a/App.UnitTest/App.UnitTest.csproj
+++ b/App.UnitTest/App.UnitTest.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Moq" Version="4.14.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-    <PackageReference Include="RazorLight" Version="2.0.0-beta4" />
+    <PackageReference Include="RazorLight" Version="2.3.1" />
     <PackageReference Include="Sendgrid" Version="9.12.0" />
   </ItemGroup>
   <ItemGroup>
