fix: page query post req

--- a/App.UnitTest/App.UnitTest.csproj
+++ b/App.UnitTest/App.UnitTest.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\App.Infrastructure\App.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Infrastructure\Utility\GoogleMapUtilTest.cs" />
     <Compile Remove="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
