--- a/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Infrastructure/App.Infrastructure.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="JWT" Version="5.2.2" />
     <PackageReference Include="NLog.Extensions.AzureBlobStorage" Version="3.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
+    <PackageReference Include="Quartz" Version="3.8.0" />
     <PackageReference Include="RazorLight" Version="2.3.1" />
     <PackageReference Include="Sendgrid" Version="9.12.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
