--- a/KingfoodIO/Properties/launchSettings.json
+++ b/KingfoodIO/Properties/launchSettings.json
@@ -20,7 +20,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchUrl": "https://localhost:5001/apis",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
