--- a/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Infrastructure/App.Infrastructure.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Compile Remove="Class1.cs" />
     <Compile Remove="InfrastructureModule.cs" />
+    <Compile Remove="Repository\DbRepository.cs" />
     <Compile Remove="Utility\Common\GoogleMapUtil.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -27,7 +28,9 @@
     <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Hangfire.AzureDocumentDB" Version="3.1.2" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
+    <PackageReference Include="Hangfire.AzureCosmosDB" Version="2.0.8" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.12" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.7" />
