--- a/App.Domain/App.Domain.csproj
+++ b/App.Domain/App.Domain.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="QuestPDF" Version="2024.6.2" />
   </ItemGroup>
   <ItemGroup>
     <None Remove=".DS_Store" />
