--- a/App.Infrastructure/App.Infrastructure.csproj
+++ b/App.Infrastructure/App.Infrastructure.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\App.Domain\App.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.12" />
     <PackageReference Include="Hangfire.AzureCosmosDB" Version="2.0.8" />
     <PackageReference Include="Hangfire.Core" Version="1.8.12" />
@@ -44,7 +45,7 @@
     <PackageReference Include="Quartz" Version="3.8.0" />
     <PackageReference Include="RazorLight" Version="2.3.1" />
     <PackageReference Include="Sendgrid" Version="9.12.0" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     <PackageReference Include="Stripe.net" Version="41.12.0" />
     <PackageReference Include="TimeZoneConverter" Version="3.2.0" />
